--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "uuid": "^8.3.2"
   }
- 
 }
